invisible navicon color fix 1st try

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -244,6 +244,7 @@
         bottom: 0;
         height: 4px;
         background: $primary-color;
+		color: $masthead-link-color;
         width: 100%;
         -webkit-transition: $global-transition;
         transition: $global-transition;
