--- a/_sass/minimal-mistakes/skins/_ac91.scss
+++ b/_sass/minimal-mistakes/skins/_ac91.scss
@@ -12,7 +12,6 @@ $footer-background-color: #226673 !default;
 $link-color: #393e46 !default;
 $masthead-link-color: mix(#fff, $background-color, 60%) !default;
 $masthead-link-color-hover: #fff !default;
-$navicon-link-color: mix(#fff, $background-color, 60%) !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
 
 .page__footer {
